# MeshCompare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  meshCompare.py
plugin/: FindMaya.cmake  meshCompare.cpp  meshCompare.h
